fix input focus, menu toggler on high contrast, add mixin for forms, edit padding, fix cols layout, better ie w/chrome1, better viewport on iphonex

--- a/app/assets/stylesheets/czegov_frontend/_czegov-bootstrap.scss
+++ b/app/assets/stylesheets/czegov_frontend/_czegov-bootstrap.scss
@@ -41,7 +41,13 @@ body {
 }
 
 [role=main] {
-  padding: 30px 0;
+  padding: 10px 0;
+}
+
+@media (min-width: 761px) {
+  [role=main] {
+    padding: 30px 0;
+  }
 }
 
 a {
