--- a/app/assets/stylesheets/czegov_frontend/czegov-bootstrap/_custom-forms.scss
+++ b/app/assets/stylesheets/czegov_frontend/czegov-bootstrap/_custom-forms.scss
@@ -87,8 +87,8 @@
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     position: absolute;
-    top: 8px;
-    left: 0;
+    top: 20px;
+    left: 10px;
     display: block;
     width: 30px;
     height: 30px;
@@ -103,8 +103,8 @@
   &::after {
     content: "";
     position: absolute;
-    top: 8px;
-    left: 0px;
+    top: 20px;
+    left: 01ppxx;
     width: 1.8rem;
     height: 1.8rem;
     content: "";
