--- a/app/assets/stylesheets/czegov_frontend/czegov-bootstrap/_variables.scss
+++ b/app/assets/stylesheets/czegov_frontend/czegov-bootstrap/_variables.scss
@@ -249,7 +249,7 @@ $transition-collapse:         height .35s ease !default;
 // Font, line-height, and color for body text, headings, and more.
 
 // stylelint-disable value-keyword-case
-$font-family-sans-serif:      -apple-system,BlinkMacSystemFont,"Segoe UI", Arial, sans-serif;
+$font-family-sans-serif:      -apple-system,"Segoe UI", Arial, sans-serif;
 $font-family-monospace:       Menlo, Monaco, Consolas, "Courier New", monospace !default;
 $font-family-base:            $font-family-sans-serif !default;
 // stylelint-enable value-keyword-case
