--- a/app/assets/stylesheets/czegov_frontend/czegov-bootstrap/mixins/_forms.scss
+++ b/app/assets/stylesheets/czegov_frontend/czegov-bootstrap/mixins/_forms.scss
@@ -13,7 +13,6 @@
 @mixin form-control-focus() {
   &:focus {
     color: $input-focus-color;
-    border-color: $input-focus-border-color;
     outline: 3px solid $orange;
     outline-offset: 0;
   }
